# minesweeper

./: README.md  main.go  meson.build  mock.go
.github/workflows/: main.yml
app/console_game/: console_game.c  meson.build
app/minesweeper/: meson.build  minesweeper.c
bot/: bot.go  connex.go  connex_test.go  debug.go  grid.go  grid_test.go  interaction.go  interaction_test.go  matrix.go  matrix_test.go  probability.go  probability_test.go  recognition.go
include/: debug.h  matrix.h  minesweeper.h  mock.h  neighbors.h  solver.h  unit-test.h
include/matrix/: matrix.h
include/minesweeper/: grid.h  list_cell.h  minesweeper.h  neighbors.h
include/mock/: mock.h
include/solver/: solver.h
solver/: configuration.go  configuration_test.go  matrix.go  matrix_test.go  solution.go  solution_test.go  solver.go  solver_test.go
src/matrix/: matrix.c  matrix_unit-test.h  meson.build  operation.h
src/minesweeper/: grid.c  list_cell.c  meson.build  minesweeper.c  minesweeper_unit-test.h
src/mock/: dump.c  game.h  list_cell.c  list_cell.h  meson.build  mock.c  mock_unit-test.h
src/solver/: configuration.c  configuration.h  grid.c  grid.h  meson.build  neighbors.h  solution.c  solution.h  solver.c  solver_unit-test.h
tests/: common.h  test.c  test.h
tests/solver/: meson.build  test_adjacent_mine.c  test_adjacent_mine.h  test_find_unsolved.h  test_solver.c
tools/: coding_style.sh  new_module.sh
unit-tests/: common.h  test_common.h  utest.c  utest.h
unit-tests/matrix/: .#test_operations.h  meson.build  test_add_row.h  test_gauss_jordan.h  test_matrix.c  test_matrix_common.h  test_mult_row.h  test_operation.h  test_swap_row.h
unit-tests/minesweeper/: meson.build  test_adjacent.h  test_is_solved.h  test_list_cell.h  test_minesweeper.c
unit-tests/mock/: meson.build  test_game.h  test_list_cell.h  test_mock.c
unit-tests/solver/: meson.build  test_adjacent_mine.h  test_bounds.h  test_configuration.h  test_find_unsolved.h  test_map.h  test_solver.c  test_solver.h
